Styled most of the page other than the hotel offers

--- a/index.html
+++ b/index.html
@@ -1,9 +1,159 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <title>SMF Hotels</title>
+
+    <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/fonts.css" />
+    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/layout.css" />
+    <link rel="stylesheet" href="styles/modules/advertisment.css" />
+    <link rel="stylesheet" href="styles/modules/footer.css" />
+    <link rel="stylesheet" href="styles/modules/footer-popup.css" />
+    <link rel="stylesheet" href="styles/modules/header.css" />
+    <link rel="stylesheet" href="styles/modules/popup.css" />
   </head>
-  <body>
+  <body class="layout-body">
+    <header class="header layout-header">
+      <a href="#" class="header_link header_link-login">Login</a>
+      <a href="#" class="header_link header_link-help">Help Center</a>
+    </header>
+
+    <footer class="footer layout-page-footer">
+      <h2>FindorTravel</h2>
+      <h3>@All Rights Reserved 2017. Findor, travel power for events and
+        attendees.</h3>
+
+      <nav class="footer_navigation">
+        <ul class="footer_navigation-list">
+          <li>
+            <a href="#" class="footer_navigation-link">About</a>
+          </li>
+          <li>
+            <a href="#" class="footer_navigation-link">Terms</a>
+          </li>
+          <li>
+            <a href="#" class="footer_navigation-link">Privacy</a>
+          </li>
+          <li>
+            <a href="#" class="footer_navigation-link">Help Center</a>
+          </li>
+          <li>
+            <a href="#" class="footer_navigation-link">Insurance</a>
+          </li>
+        </ul>
+      </nav>
+
+      <p class="footer_note">Findor Corp. is not a booking agent or tour
+        operator, and does not charge any service fees to users of our site. Our
+        partners (airlines, travel providers, and booking agents) who list
+        airfare, tours, and travel packages are required to include all fees and
+        surcharges in their listed prices. Examples include the Federal
+        September 11th Security Fee, international departure and arrival taxes
+        and fees, federal excise tax, and other service, handling and
+        miscellaneous fees and surcharges. When you book with one of our
+        partners, please be sure to check their site for a full disclosure of
+        all applicable fees as required by the U.S. Department of
+        Transportation. Airfares are generally quoted per person in USD unless
+        otherwise noted. Read more</p>
+    </footer>
+
+    <main class="layout-main">
+      <aside class="popup layout-popup">
+        <p>There are 20 people looking at this hotel
+        right now</p>
+      </aside>
+
+      <aside class="footer-popup layout-footer-popup">
+        <p class="footer-popup_content">Bus packages from Austin and Houston
+          available with <strong>any hotel</strong>.</p>
+      </aside>
+
+      <hgroup>
+        <h1>8 Hotel Deals</h1>
+        <h3>The prices shown are the <strong>special rates</strong> or
+          <strong>lowest price guaranteed</strong> for attendees only
+        </h3>
+      </hgroup>
+
+      <div class="advertisment">Advertisment will be here</div>
+
+      <section>
+        <h2>Hot Deals</h2>
+        <ul class="boxed-list">
+          <li class="hotel-offer boxed-list_box">
+            <ul class="hotel-offer_gallery photo-gallery">
+              <li><img class="hotel-offer_photo" alt="" /></li>
+              <li><img class="hotel-offer_photo" alt="" /></li>
+              <li><img class="hotel-offer_photo" alt="" /></li>
+            </ul>
+            <h3 class="hotel-offer_name">Marriott Hotel</h3>
+            <div class="hotel-offer_distance">1.6 KM ➔ SMF</div>
+            <div class="hotel-offer_price">
+              <span class="hotel-offer_price-old">$232</span>
+              <span class="hotel-offer_price-new">$193</span
+              <span class="hotel-offer_price-pricing">Nightly</span>
+            </div>
+            <div class="hotel-offer_discount">-30%</div>
+          </li>
+
+          <li class="hotel-offer boxed-list_box">
+            <ul class="hotel-offer_gallery photo-gallery">
+              <li><img class="hotel-offer_photo" alt="" /></li>
+              <li><img class="hotel-offer_photo" alt="" /></li>
+              <li><img class="hotel-offer_photo" alt="" /></li>
+            </ul>
+            <h3 class="hotel-offer_name">Marriott Hotel</h3>
+            <div class="hotel-offer_distance">1.6 KM ➔ SMF</div>
+            <div class="hotel-offer_price">
+              <span class="hotel-offer_price-old">$232</span>
+              <span class="hotel-offer_price-new">$193</span
+              <span class="hotel-offer_price-pricing">Nightly</span>
+            </div>
+            <div class="hotel-offer_discount-info">-30%</div>
+            <div class="hotel-offer_extra-info">Most stay here</div>
+          </li>
+
+          <li class="hotel-offer boxed-list_box">
+            <ul class="hotel-offer_gallery photo-gallery">
+              <li><img class="hotel-offer_photo" alt="" /></li>
+              <li><img class="hotel-offer_photo" alt="" /></li>
+              <li><img class="hotel-offer_photo" alt="" /></li>
+            </ul>
+            <h3 class="hotel-offer_name">Marriott Hotel</h3>
+            <div class="hotel-offer_distance">1.6 KM ➔ SMF</div>
+            <div class="hotel-offer_price">
+              <span class="hotel-offer_price-old">$232</span>
+              <span class="hotel-offer_price-new">$193</span
+              <span class="hotel-offer_price-pricing">Nightly</span>
+            </div>
+            <div class="hotel-offer_discount">-30%</div>
+          </li>
+
+          <li class="hotel-offer boxed-list_box">
+            <ul class="hotel-offer_gallery photo-gallery">
+              <li><img class="hotel-offer_photo" alt="" /></li>
+              <li><img class="hotel-offer_photo" alt="" /></li>
+              <li><img class="hotel-offer_photo" alt="" /></li>
+            </ul>
+            <h3 class="hotel-offer_name">Marriott Hotel</h3>
+            <div class="hotel-offer_distance">1.6 KM ➔ SMF</div>
+            <div class="hotel-offer_price">
+              <span class="hotel-offer_price-old">$232</span>
+              <span class="hotel-offer_price-new">$193</span
+              <span class="hotel-offer_price-pricing">Nightly</span>
+            </div>
+            <div class="hotel-offer_discount">-30%</div>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>On a Budget</h2>
+        <ul>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
