Added boxed-list CSS module

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="stylesheet" href="styles/layout.css" />
     <link rel="stylesheet" href="styles/modules/advertisment.css" />
+    <link rel="stylesheet" href="styles/modules/boxed-list.css" />
     <link rel="stylesheet" href="styles/modules/footer.css" />
     <link rel="stylesheet" href="styles/modules/footer-popup.css" />
     <link rel="stylesheet" href="styles/modules/header.css" />
