Added classes boxed-list_element to hotel offers in HTML file

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <section>
         <h2>Hot Deals</h2>
         <ul class="boxed-list">
-          <li class="hotel-offer boxed-list_box">
+          <li class="hotel-offer boxed-list_element">
             <ul class="hotel-offer_gallery photo-gallery">
               <li><img class="hotel-offer_photo" alt="" /></li>
               <li><img class="hotel-offer_photo" alt="" /></li>
@@ -99,7 +99,7 @@
             <div class="hotel-offer_discount">-30%</div>
           </li>
 
-          <li class="hotel-offer boxed-list_box">
+          <li class="hotel-offer boxed-list_element">
             <ul class="hotel-offer_gallery photo-gallery">
               <li><img class="hotel-offer_photo" alt="" /></li>
               <li><img class="hotel-offer_photo" alt="" /></li>
@@ -116,7 +116,7 @@
             <div class="hotel-offer_extra-info">Most stay here</div>
           </li>
 
-          <li class="hotel-offer boxed-list_box">
+          <li class="hotel-offer boxed-list_element">
             <ul class="hotel-offer_gallery photo-gallery">
               <li><img class="hotel-offer_photo" alt="" /></li>
               <li><img class="hotel-offer_photo" alt="" /></li>
@@ -132,7 +132,7 @@
             <div class="hotel-offer_discount">-30%</div>
           </li>
 
-          <li class="hotel-offer boxed-list_box">
+          <li class="hotel-offer boxed-list_element">
             <ul class="hotel-offer_gallery photo-gallery">
               <li><img class="hotel-offer_photo" alt="" /></li>
               <li><img class="hotel-offer_photo" alt="" /></li>
