Added responsive styles for header and footer (for smaller screens)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   </head>
   <body class="layout-body">
     <header class="header layout-header">
+      <a href="#" class="header_logo"><img src="images/smf-logo.png"
+                                           alt="" /></a>
       <a href="#" class="header_link header_link-login">Login</a>
       <a href="#" class="header_link header_link-help">Help Center</a>
     </header>
