Styled hotel offers

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="styles/modules/footer.css" />
     <link rel="stylesheet" href="styles/modules/footer-popup.css" />
     <link rel="stylesheet" href="styles/modules/header.css" />
+    <link rel="stylesheet" href="styles/modules/hotel-offer.css" />
+    <link rel="stylesheet" href="styles/modules/photo-gallery.css" />
     <link rel="stylesheet" href="styles/modules/popup.css" />
   </head>
   <body class="layout-body">
@@ -86,68 +88,152 @@
         <h2>Hot Deals</h2>
         <ul class="boxed-list">
           <li class="hotel-offer boxed-list_element">
-            <ul class="hotel-offer_gallery photo-gallery">
-              <li><img class="hotel-offer_photo" alt="" /></li>
-              <li><img class="hotel-offer_photo" alt="" /></li>
-              <li><img class="hotel-offer_photo" alt="" /></li>
-            </ul>
+            <div class="hotel-offer_gallery photo-gallery">
+              <ul class="photo-gallery_photo-list">
+                <li class="photo-gallery_photo">
+                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
+                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/dining2_tampa_marriott_-_Copie.jpg" />
+                </li>
+                <li class="photo-gallery_photo">
+                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
+                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/dining_tampa_marriott_-_Copie.jpg"/></li>
+                <li class="photo-gallery_photo">
+                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
+                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/suite_tampa_marriott_-_Copie.jpg" />
+                </li>
+                <li class="photo-gallery_photo">
+                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
+                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/tampamariottoutsid2copy.jpg" />
+                </li>
+              </ul>
+              <button class="photo-gallery_control-next photo-gallery_control">Next</button>
+              <button class="photo-gallery_control-previous photo-gallery_control">Previous</button>
+            </div>
             <h3 class="hotel-offer_name">Marriott Hotel</h3>
             <div class="hotel-offer_distance">1.6 KM ➔ SMF</div>
             <div class="hotel-offer_price">
               <span class="hotel-offer_price-old">$232</span>
-              <span class="hotel-offer_price-new">$193</span
+              <span class="hotel-offer_price-new">$193</span>
               <span class="hotel-offer_price-pricing">Nightly</span>
             </div>
             <div class="hotel-offer_discount">-30%</div>
+            <div class="hotel-offer_tripadvisor-info">
+              <span class="hotel-offer_tripadvisor-rating-stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
+              <span class="hotel-offer_tripadvisor-rating-description">Excellent</span>
+              <span class="hotel-offer_tripadvisor-reviews-count">5237 reviews</span>
+            </div>
           </li>
 
           <li class="hotel-offer boxed-list_element">
-            <ul class="hotel-offer_gallery photo-gallery">
-              <li><img class="hotel-offer_photo" alt="" /></li>
-              <li><img class="hotel-offer_photo" alt="" /></li>
-              <li><img class="hotel-offer_photo" alt="" /></li>
-            </ul>
+            <div class="hotel-offer_gallery photo-gallery">
+              <ul class="photo-gallery_photo-list">
+                <li class="photo-gallery_photo">
+                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
+                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/dining2_tampa_marriott_-_Copie.jpg" />
+                </li>
+                <li class="photo-gallery_photo">
+                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
+                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/dining_tampa_marriott_-_Copie.jpg"/></li>
+                <li class="photo-gallery_photo">
+                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
+                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/suite_tampa_marriott_-_Copie.jpg" />
+                </li>
+                <li class="photo-gallery_photo">
+                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
+                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/tampamariottoutsid2copy.jpg" />
+                </li>
+              </ul>
+              <button class="photo-gallery_control-next photo-gallery_control">Next</button>
+              <button class="photo-gallery_control-previous photo-gallery_control">Previous</button>
+            </div>
             <h3 class="hotel-offer_name">Marriott Hotel</h3>
             <div class="hotel-offer_distance">1.6 KM ➔ SMF</div>
             <div class="hotel-offer_price">
               <span class="hotel-offer_price-old">$232</span>
-              <span class="hotel-offer_price-new">$193</span
+              <span class="hotel-offer_price-new">$193</span>
               <span class="hotel-offer_price-pricing">Nightly</span>
             </div>
-            <div class="hotel-offer_discount-info">-30%</div>
+            <div class="hotel-offer_discount">-30%</div>
+            <div class="hotel-offer_tripadvisor-info">
+              <span class="hotel-offer_tripadvisor-rating-stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
+              <span class="hotel-offer_tripadvisor-rating-description">Excellent</span>
+              <span class="hotel-offer_tripadvisor-reviews-count">5237 reviews</span>
+            </div>
             <div class="hotel-offer_extra-info">Most stay here</div>
           </li>
 
           <li class="hotel-offer boxed-list_element">
-            <ul class="hotel-offer_gallery photo-gallery">
-              <li><img class="hotel-offer_photo" alt="" /></li>
-              <li><img class="hotel-offer_photo" alt="" /></li>
-              <li><img class="hotel-offer_photo" alt="" /></li>
-            </ul>
+            <div class="hotel-offer_gallery photo-gallery">
+              <ul class="photo-gallery_photo-list">
+                <li class="photo-gallery_photo">
+                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
+                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/dining2_tampa_marriott_-_Copie.jpg" />
+                </li>
+                <li class="photo-gallery_photo">
+                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
+                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/dining_tampa_marriott_-_Copie.jpg"/></li>
+                <li class="photo-gallery_photo">
+                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
+                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/suite_tampa_marriott_-_Copie.jpg" />
+                </li>
+                <li class="photo-gallery_photo">
+                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
+                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/tampamariottoutsid2copy.jpg" />
+                </li>
+              </ul>
+              <button class="photo-gallery_control-next photo-gallery_control">Next</button>
+              <button class="photo-gallery_control-previous photo-gallery_control">Previous</button>
+            </div>
             <h3 class="hotel-offer_name">Marriott Hotel</h3>
             <div class="hotel-offer_distance">1.6 KM ➔ SMF</div>
             <div class="hotel-offer_price">
               <span class="hotel-offer_price-old">$232</span>
-              <span class="hotel-offer_price-new">$193</span
+              <span class="hotel-offer_price-new">$193</span>
               <span class="hotel-offer_price-pricing">Nightly</span>
             </div>
             <div class="hotel-offer_discount">-30%</div>
+            <div class="hotel-offer_tripadvisor-info">
+              <span class="hotel-offer_tripadvisor-rating-stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
+              <span class="hotel-offer_tripadvisor-rating-description">Excellent</span>
+              <span class="hotel-offer_tripadvisor-reviews-count">5237 reviews</span>
+            </div>
           </li>
 
           <li class="hotel-offer boxed-list_element">
-            <ul class="hotel-offer_gallery photo-gallery">
-              <li><img class="hotel-offer_photo" alt="" /></li>
-              <li><img class="hotel-offer_photo" alt="" /></li>
-              <li><img class="hotel-offer_photo" alt="" /></li>
-            </ul>
+            <div class="hotel-offer_gallery photo-gallery">
+              <ul class="photo-gallery_photo-list">
+                <li class="photo-gallery_photo">
+                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
+                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/dining2_tampa_marriott_-_Copie.jpg" />
+                </li>
+                <li class="photo-gallery_photo">
+                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
+                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/dining_tampa_marriott_-_Copie.jpg"/></li>
+                <li class="photo-gallery_photo">
+                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
+                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/suite_tampa_marriott_-_Copie.jpg" />
+                </li>
+                <li class="photo-gallery_photo">
+                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
+                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/tampamariottoutsid2copy.jpg" />
+                </li>
+              </ul>
+              <button class="photo-gallery_control-next photo-gallery_control">Next</button>
+              <button class="photo-gallery_control-previous photo-gallery_control">Previous</button>
+            </div>
             <h3 class="hotel-offer_name">Marriott Hotel</h3>
             <div class="hotel-offer_distance">1.6 KM ➔ SMF</div>
             <div class="hotel-offer_price">
               <span class="hotel-offer_price-old">$232</span>
-              <span class="hotel-offer_price-new">$193</span
+              <span class="hotel-offer_price-new">$193</span>
               <span class="hotel-offer_price-pricing">Nightly</span>
             </div>
             <div class="hotel-offer_discount">-30%</div>
+            <div class="hotel-offer_tripadvisor-info">
+              <span class="hotel-offer_tripadvisor-rating-stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
+              <span class="hotel-offer_tripadvisor-rating-description">Excellent</span>
+              <span class="hotel-offer_tripadvisor-reviews-count">5237 reviews</span>
+            </div>
           </li>
         </ul>
       </section>
