Implemented animated photo gallery

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="styles/modules/hotel-offer.css" />
     <link rel="stylesheet" href="styles/modules/photo-gallery.css" />
     <link rel="stylesheet" href="styles/modules/popup.css" />
+
+    <script src="scripts/photo-gallery.js"></script>
   </head>
   <body class="layout-body">
     <header class="header layout-header">
