Added close button to the popup

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
       <aside class="popup layout-popup">
         <p>There are 20 people looking at this hotel
         right now</p>
+        <!-- Cross mark character inside the button. -->
+        <button class="popup_close"><span class="popup_close-cross">&#10799;</span></button>
       </aside>
 
       <aside class="footer-popup layout-footer-popup">
