--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="styles/modules/popup.css" />
 
     <script src="scripts/photo-gallery.js"></script>
+    <script src="scripts/popup.js"></script>
   </head>
   <body class="layout-body">
     <header class="header layout-header">
