Implemented displaying randomly chosen number of people

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
     <main class="layout-main">
       <aside class="popup layout-popup">
-        <p>There are 20 people looking at this hotel
-        right now</p>
+        <p>There are <span class="popup_people-number">20</span> people looking
+          at this hotel right now</p>
         <!-- Cross mark character inside the button. -->
         <button class="popup_close"><span class="popup_close-cross">&#10799;</span></button>
       </aside>
