--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <link rel="stylesheet" href="styles/modules/photo-gallery.css" />
     <link rel="stylesheet" href="styles/modules/popup.css" />
 
+    <!-- Change to minimized version -->
+    <script src="scripts/script/lib/mustache.js"></script>
+
+    <script src="scripts/data-loader.js"></script>
     <script src="scripts/photo-gallery.js"></script>
     <script src="scripts/popup.js"></script>
   </head>
