Implemented loading data from the JSON. Currently using hard-coded example JSON.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <link rel="stylesheet" href="styles/modules/popup.css" />
 
     <!-- Change to minimized version -->
-    <script src="scripts/script/lib/mustache.js"></script>
+    <script src="scripts/lib/mustache.js"></script>
 
+    <script src="scripts/api-example-response.js"></script>
     <script src="scripts/data-loader.js"></script>
     <script src="scripts/photo-gallery.js"></script>
     <script src="scripts/popup.js"></script>
@@ -95,163 +96,49 @@
 
       <section>
         <h2>Hot Deals</h2>
-        <ul class="boxed-list">
-          <li class="hotel-offer boxed-list_element">
-            <div class="hotel-offer_gallery photo-gallery">
-              <ul class="photo-gallery_photo-list">
-                <li class="photo-gallery_photo">
-                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
-                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/dining2_tampa_marriott_-_Copie.jpg" />
-                </li>
-                <li class="photo-gallery_photo">
-                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
-                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/dining_tampa_marriott_-_Copie.jpg"/></li>
-                <li class="photo-gallery_photo">
-                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
-                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/suite_tampa_marriott_-_Copie.jpg" />
-                </li>
-                <li class="photo-gallery_photo">
-                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
-                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/tampamariottoutsid2copy.jpg" />
-                </li>
-              </ul>
-              <button class="photo-gallery_control-next photo-gallery_control">Next</button>
-              <button class="photo-gallery_control-previous photo-gallery_control">Previous</button>
-            </div>
-            <h3 class="hotel-offer_name">Marriott Hotel</h3>
-            <div class="hotel-offer_distance">1.6 KM ➔ SMF</div>
-            <div class="hotel-offer_price">
-              <span class="hotel-offer_price-old">$232</span>
-              <span class="hotel-offer_price-new">$193</span>
-              <span class="hotel-offer_price-pricing">Nightly</span>
-            </div>
-            <div class="hotel-offer_discount">-30%</div>
-            <div class="hotel-offer_tripadvisor-info">
-              <span class="hotel-offer_tripadvisor-rating-stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
-              <span class="hotel-offer_tripadvisor-rating-description">Excellent</span>
-              <span class="hotel-offer_tripadvisor-reviews-count">5237 reviews</span>
-            </div>
-          </li>
-
-          <li class="hotel-offer boxed-list_element">
-            <div class="hotel-offer_gallery photo-gallery">
-              <ul class="photo-gallery_photo-list">
-                <li class="photo-gallery_photo">
-                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
-                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/dining2_tampa_marriott_-_Copie.jpg" />
-                </li>
-                <li class="photo-gallery_photo">
-                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
-                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/dining_tampa_marriott_-_Copie.jpg"/></li>
-                <li class="photo-gallery_photo">
-                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
-                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/suite_tampa_marriott_-_Copie.jpg" />
-                </li>
-                <li class="photo-gallery_photo">
-                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
-                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/tampamariottoutsid2copy.jpg" />
-                </li>
-              </ul>
-              <button class="photo-gallery_control-next photo-gallery_control">Next</button>
-              <button class="photo-gallery_control-previous photo-gallery_control">Previous</button>
-            </div>
-            <h3 class="hotel-offer_name">Marriott Hotel</h3>
-            <div class="hotel-offer_distance">1.6 KM ➔ SMF</div>
-            <div class="hotel-offer_price">
-              <span class="hotel-offer_price-old">$232</span>
-              <span class="hotel-offer_price-new">$193</span>
-              <span class="hotel-offer_price-pricing">Nightly</span>
-            </div>
-            <div class="hotel-offer_discount">-30%</div>
-            <div class="hotel-offer_tripadvisor-info">
-              <span class="hotel-offer_tripadvisor-rating-stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
-              <span class="hotel-offer_tripadvisor-rating-description">Excellent</span>
-              <span class="hotel-offer_tripadvisor-reviews-count">5237 reviews</span>
-            </div>
-            <div class="hotel-offer_extra-info">Most stay here</div>
-          </li>
-
-          <li class="hotel-offer boxed-list_element">
-            <div class="hotel-offer_gallery photo-gallery">
-              <ul class="photo-gallery_photo-list">
-                <li class="photo-gallery_photo">
-                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
-                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/dining2_tampa_marriott_-_Copie.jpg" />
-                </li>
-                <li class="photo-gallery_photo">
-                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
-                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/dining_tampa_marriott_-_Copie.jpg"/></li>
-                <li class="photo-gallery_photo">
-                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
-                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/suite_tampa_marriott_-_Copie.jpg" />
-                </li>
-                <li class="photo-gallery_photo">
-                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
-                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/tampamariottoutsid2copy.jpg" />
-                </li>
-              </ul>
-              <button class="photo-gallery_control-next photo-gallery_control">Next</button>
-              <button class="photo-gallery_control-previous photo-gallery_control">Previous</button>
-            </div>
-            <h3 class="hotel-offer_name">Marriott Hotel</h3>
-            <div class="hotel-offer_distance">1.6 KM ➔ SMF</div>
-            <div class="hotel-offer_price">
-              <span class="hotel-offer_price-old">$232</span>
-              <span class="hotel-offer_price-new">$193</span>
-              <span class="hotel-offer_price-pricing">Nightly</span>
-            </div>
-            <div class="hotel-offer_discount">-30%</div>
-            <div class="hotel-offer_tripadvisor-info">
-              <span class="hotel-offer_tripadvisor-rating-stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
-              <span class="hotel-offer_tripadvisor-rating-description">Excellent</span>
-              <span class="hotel-offer_tripadvisor-reviews-count">5237 reviews</span>
-            </div>
-          </li>
-
-          <li class="hotel-offer boxed-list_element">
-            <div class="hotel-offer_gallery photo-gallery">
-              <ul class="photo-gallery_photo-list">
-                <li class="photo-gallery_photo">
-                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
-                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/dining2_tampa_marriott_-_Copie.jpg" />
-                </li>
-                <li class="photo-gallery_photo">
-                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
-                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/dining_tampa_marriott_-_Copie.jpg"/></li>
-                <li class="photo-gallery_photo">
-                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
-                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/suite_tampa_marriott_-_Copie.jpg" />
-                </li>
-                <li class="photo-gallery_photo">
-                  <img class="hotel-offer_photo" alt="Photo of the hotel room"
-                       src="https://findor-media-staging.s3.amazonaws.com/media/hotel_photo/2017/02/tampamariottoutsid2copy.jpg" />
-                </li>
-              </ul>
-              <button class="photo-gallery_control-next photo-gallery_control">Next</button>
-              <button class="photo-gallery_control-previous photo-gallery_control">Previous</button>
-            </div>
-            <h3 class="hotel-offer_name">Marriott Hotel</h3>
-            <div class="hotel-offer_distance">1.6 KM ➔ SMF</div>
-            <div class="hotel-offer_price">
-              <span class="hotel-offer_price-old">$232</span>
-              <span class="hotel-offer_price-new">$193</span>
-              <span class="hotel-offer_price-pricing">Nightly</span>
-            </div>
-            <div class="hotel-offer_discount">-30%</div>
-            <div class="hotel-offer_tripadvisor-info">
-              <span class="hotel-offer_tripadvisor-rating-stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
-              <span class="hotel-offer_tripadvisor-rating-description">Excellent</span>
-              <span class="hotel-offer_tripadvisor-reviews-count">5237 reviews</span>
-            </div>
-          </li>
-        </ul>
+        <div id="hotel-offers-hot"></div>
+        <script id="hotel-offers-template" type="x-tmpl-mustache">
+          <ul class="boxed-list">
+          {{# hotels }}
+            <li class="hotel-offer boxed-list_element">
+              <div class="hotel-offer_gallery photo-gallery">
+                <ul class="photo-gallery_photo-list">
+                  {{# photos }}
+                    <li class="photo-gallery_photo">
+                      <img class="hotel-offer_photo" alt="Photo of the hotel room"
+                           src="{{ photo_url }}" />
+                    </li>
+                  {{/ photos }}
+                </ul>
+                <button class="photo-gallery_control-next photo-gallery_control">Next</button>
+                <button class="photo-gallery_control-previous photo-gallery_control">Previous</button>
+              </div>
+              <h3 class="hotel-offer_name">{{ name }}</h3>
+              <div class="hotel-offer_distance">1.6 KM ➔ SMF</div>
+              <div class="hotel-offer_price">
+                <span class="hotel-offer_price-old">$232</span>
+                <span class="hotel-offer_price-new">$193</span>
+                <span class="hotel-offer_price-pricing">Nightly</span>
+              </div>
+              <div class="hotel-offer_discount">-30%</div>
+              <div class="hotel-offer_tripadvisor-info">
+                <span class="hotel-offer_tripadvisor-rating-stars">{{{ tripadvisor_rating_stars }}}</span>
+                <span class="hotel-offer_tripadvisor-rating-description">{{ tripadvisor_rating_description }}</span>
+                <span class="hotel-offer_tripadvisor-reviews-count">{{ tripadvisor_reviews_count }} reviews</span>
+              </div>
+            </li>
+          {{/ hotels }}
+          </ul>
+        </script>
       </section>
 
+      <!-- TODO: If this section will be active?
       <section>
         <h2>On a Budget</h2>
         <ul>
         </ul>
       </section>
+      -->
     </main>
   </body>
 </html>
