--- a/index.html
+++ b/index.html
@@ -102,36 +102,38 @@
         <script id="hotel-offers-template" type="x-tmpl-mustache">
           <ul class="boxed-list">
             {{# hotels }}
-              <li class="hotel-offer boxed-list_element">
-                <div class="hotel-offer_gallery photo-gallery">
-                  <ul class="photo-gallery_photo-list">
-                    {{# photos }}
-                      <li class="photo-gallery_photo">
-                        <img class="hotel-offer_photo" alt="Photo of the hotel room"
-                             src="{{ photo_url }}" />
-                      </li>
-                    {{/ photos }}
-                  </ul>
-                  <button class="photo-gallery_control-next photo-gallery_control">Next</button>
-                  <button class="photo-gallery_control-previous photo-gallery_control">Previous</button>
-                </div>
-                <div class="hotel-offer_heading">
-                  <div class="hotel-offer_main-info">
-                    <h3 class="hotel-offer_name">{{ name }}</h3>
-                    <p class="hotel-offer_distance">1.6 KM ➔ SMF</p>
+              <li class="boxed-list_element">
+                <a href="{{ tripadvisor_url }}" class="hotel-offer">
+                  <div class="hotel-offer_gallery photo-gallery">
+                    <ul class="photo-gallery_photo-list">
+                      {{# photos }}
+                        <li class="photo-gallery_photo">
+                          <img class="hotel-offer_photo" alt="Photo of the hotel room"
+                               src="{{ photo_url }}" />
+                        </li>
+                      {{/ photos }}
+                    </ul>
+                    <button class="photo-gallery_control-next photo-gallery_control">Next</button>
+                    <button class="photo-gallery_control-previous photo-gallery_control">Previous</button>
                   </div>
-                  <div class="hotel-offer_price">
-                    <span class="hotel-offer_price-old">$232</span>
-                    <span class="hotel-offer_price-new">$193</span>
-                    <span class="hotel-offer_price-pricing">Nightly</span>
+                  <div class="hotel-offer_heading">
+                    <div class="hotel-offer_main-info">
+                      <h3 class="hotel-offer_name">{{ name }}</h3>
+                      <p class="hotel-offer_distance">1.6 KM ➔ SMF</p>
+                    </div>
+                    <div class="hotel-offer_price">
+                      <span class="hotel-offer_price-old">$232</span>
+                      <span class="hotel-offer_price-new">$193</span>
+                      <span class="hotel-offer_price-pricing">Nightly</span>
+                    </div>
                   </div>
-                </div>
-                <div class="hotel-offer_discount">-30%</div>
-                <div class="hotel-offer_tripadvisor-info">
-                  <span class="hotel-offer_tripadvisor-rating-stars">{{{ tripadvisor_rating_stars }}}</span>
-                  <span class="hotel-offer_tripadvisor-rating-description">{{ tripadvisor_rating_description }}</span>
-                  <span class="hotel-offer_tripadvisor-reviews-count">{{ tripadvisor_reviews_count }} reviews</span>
-                </div>
+                  <div class="hotel-offer_discount">-30%</div>
+                  <div class="hotel-offer_tripadvisor-info">
+                    <span class="hotel-offer_tripadvisor-rating-stars">{{{ tripadvisor_rating_stars }}}</span>
+                    <span class="hotel-offer_tripadvisor-rating-description">{{ tripadvisor_rating_description }}</span>
+                    <span class="hotel-offer_tripadvisor-reviews-count">{{ tripadvisor_reviews_count }} reviews</span>
+                  </div>
+                </a>
               </li>
             {{/ hotels }}
 
