Switched to using minimized version of Mustache library

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <link rel="stylesheet" href="styles/modules/photo-gallery.css" />
     <link rel="stylesheet" href="styles/modules/popup.css" />
 
-    <!-- Change to minimized version -->
-    <script src="scripts/lib/mustache.js"></script>
+    <script src="scripts/lib/mustache.min.js"></script>
 
     <script src="scripts/api-example-response.js"></script>
     <script src="scripts/data-loader.js"></script>
